# api

./: README.md  db.sqlite3  pyproject.toml  requirements_dev.txt
api/: settings.py  urls.py
person/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
person/migrations/: 0001_initial.py  0002_alter_person_middle_name.py
